<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:background="@color/Charcoal">

    <LinearLayout
        android:id="@+id/activity_instruction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_title"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="@color/White"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="public"
            android:textSize="24sp"
            android:textStyle="normal|italic"
            android:layout_marginTop="16dp"
            android:textColor="@color/White"
            tools:ignore="HardcodedText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/instruction_0_text"
            android:textSize="18sp"
            android:textColor="@color/White"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="write"
            android:textSize="24sp"
            android:textStyle="normal|italic"
            android:textColor="@color/White"
            tools:ignore="HardcodedText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/instruction_1_text"
            android:textSize="18sp"
            android:textColor="@color/White"/>

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_next_button"
            android:layout_marginTop="18dp"
            android:background="@color/Pink"
            android:textColor="@color/White"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_2_text"
            android:textColor="@color/White"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_3_text"
            android:textColor="@color/White"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_link_text"
            android:textColor="@color/White"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_4_txt"
            android:textColor="@color/White"/>
    </LinearLayout>
</FrameLayout>